<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetailsTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:fitsSystemWindows="true"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/linearInputLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDetailsTB">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editImageIV"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="32dp"
            android:src="@drawable/ic_stat_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameProductET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nameProduct"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/costProductET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/costProduct"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/descriptionET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/description"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearInputLL" />

</androidx.constraintlayout.widget.ConstraintLayout>